# cafeatlas-ai

./: .gitignore  AGENT.md  README.md  ROADMAP.md  package.json  pnpm-lock.yaml
apps/api/: .env.example  README.md  alembic.ini  package.json  pyproject.toml  seed.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: __init__.py  router.py
apps/api/app/api/v1/: coffees.py  health.py  origins.py  version.py
apps/api/app/core/: metadata.py  settings.py
apps/api/app/db/: __init__.py  session.py
apps/api/app/models/: __init__.py  coffee.py  farm.py  producer.py
apps/api/app/repositories/: __init__.py  coffees.py  origins.py
apps/api/app/schemas/: __init__.py  coffee.py  origin.py
apps/api/migrations/: README  env.py
apps/api/migrations/versions/: 20260630_01_create_coffees_table.py  20260630_02_create_producers_and_farms.py  20260630_03_link_coffees_to_producers_and_farms.py  20260630_04_add_coffee_storytelling_fields.py  20260630_05_add_origin_image_urls.py
apps/api/tests/: conftest.py  test_app.py  test_coffee_schema.py  test_coffees_repository.py  test_coffees_routes.py  test_db_session.py  test_health.py  test_origin_models.py  test_origins_repository.py  test_origins_routes.py  test_seed.py  test_version.py
apps/mobile/: .env.example  README.md  package.json
apps/mobile/components/: catalog-filter-bar.tsx  detail-screen-shell.tsx  search-toolbar.tsx  status-panel.tsx
apps/mobile/constants/: theme.ts
apps/mobile/lib/: cafeatlas-api.ts
apps/web/: README.md  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
(+22 files in other folders)
