[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cafeatlas-api"
version = "0.1.0"
description = "FastAPI backend for CafeAtlas AI"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic-settings>=2.7,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
